# routes/index.js
@@ -10,7 +10,7 @@ const userRoutes = require("./userRoutes");
 const taskRoutes = require("./taskRoutes");
 
 router.use("/user", userRoutes);
-router.use("/task", taskRoutes);
+router.use("/tasks", taskRoutes);
 
 router.use(errorHandlerMiddleware);
 
